--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "classnames": "^2.2.6",
     "dotenv": "^10.0.0",
     "gray-matter": "^4.0.3",
+    "jquery": "^3.6.0",
     "next": "^10.0.0",
+    "owl.carousel": "^2.3.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "serverless-mysql": "^1.5.4",
