--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "dotenv": "^10.0.0",
     "gray-matter": "^4.0.3",
     "jquery": "^3.6.0",
-    "next": "^10.0.0",
+    "next": "^11.0.0",
+    "nextjs": "^0.0.3",
     "owl.carousel": "^2.3.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "serverless-mysql": "^1.5.4",
     "swr": "^0.5.6"
+  },
+  "devDependencies": {
+    "eslint": "^7.28.0",
+    "eslint-config-next": "^11.0.0"
   }
 }
