--- a/package.json
+++ b/package.json
@@ -5,23 +5,18 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "node_modules/next/dist/bin/next start -p $PORT"
+    "start": "next start"
   },
   "dependencies": {
     "classnames": "^2.2.6",
     "dotenv": "^10.0.0",
     "gray-matter": "^4.0.3",
     "jquery": "^3.6.0",
-    "next": "^11.0.0",
-    "nextjs": "^0.0.3",
+    "next": "^10.0.0",
     "owl.carousel": "^2.3.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "serverless-mysql": "^1.5.4",
     "swr": "^0.5.6"
-  },
-  "devDependencies": {
-    "eslint": "^7.28.0",
-    "eslint-config-next": "^11.0.0"
   }
 }
