--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "node_modules/next/dist/bin/next start -p $PORT"
+    "start": "next start"
   },
   "dependencies": {
     "classnames": "^2.2.6",
@@ -13,7 +13,6 @@
     "gray-matter": "^4.0.3",
     "jquery": "^3.6.0",
     "next": "^10.0.0",
-    "owl.carousel": "^2.3.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "serverless-mysql": "^1.5.4",
