--- a/package.json
+++ b/package.json
@@ -8,14 +8,22 @@
     "start": "node_modules/next/dist/bin/next start -p $PORT"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.2",
     "classnames": "^2.2.6",
     "dotenv": "^10.0.0",
+    "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
     "jquery": "^3.6.0",
+    "net": "^1.0.2",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-tooltip": "^4.2.21",
     "serverless-mysql": "^1.5.4",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "tls": "0.0.1"
+  },
+  "devDependencies": {
+    "@material-ui/icons": "^4.11.2"
   }
 }
