--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.6.0",
     "net": "^1.0.2",
     "next": "^10.0.0",
+    "perf_hooks": "0.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-tooltip": "^4.2.21",
