--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "net": "^1.0.2",
     "next": "^10.0.0",
     "perf_hooks": "0.0.1",
+    "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-swipeable-views": "^0.14.0",
     "react-tooltip": "^4.2.21",
     "serverless-mysql": "^1.5.4",
     "swr": "^0.5.6",
