--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.2",
+    "@terwanerik/scrolltrigger": "^1.0.5",
+    "animate.css": "^4.1.1",
     "classnames": "^2.2.6",
     "dotenv": "^10.0.0",
+    "framer-motion": "^4.1.17",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
     "jquery": "^3.6.0",
@@ -18,8 +21,11 @@
     "next": "^10.0.0",
     "perf_hooks": "0.0.1",
     "prop-types": "^15.7.2",
+    "qs": "^6.10.1",
     "react": "17.0.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "17.0.1",
+    "react-intersection-observer": "^8.32.0",
     "react-swipeable-views": "^0.14.0",
     "react-tooltip": "^4.2.21",
     "serverless-mysql": "^1.5.4",
