--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node_modules/next/dist/bin/next start -p $PORT"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.26.0",
     "@material-ui/core": "^4.12.2",
     "@paypal/checkout-server-sdk": "^1.0.2",
     "@stripe/stripe-js": "^1.17.0",
@@ -21,6 +22,7 @@
     "jquery": "^3.6.0",
     "net": "^1.0.2",
     "next": "^10.0.0",
+    "nodemailer": "^6.6.3",
     "perf_hooks": "0.0.1",
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
