--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "17.0.1",
     "react-intersection-observer": "^8.32.0",
     "react-redux": "^7.2.4",
+    "react-spring": "^9.2.4",
     "react-swipeable-views": "^0.14.0",
     "react-tooltip": "^4.2.21",
     "redux": "^4.1.1",
