--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.6.0",
     "net": "^1.0.2",
     "next": "^10.0.0",
+    "next-iron-session": "^4.2.0",
     "nodemailer": "^6.6.3",
     "perf_hooks": "0.0.1",
     "prop-types": "^15.7.2",
