--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "17.0.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "17.0.1",
+    "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.32.0",
     "react-redux": "^7.2.4",
     "react-spring": "^9.2.4",
