--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.32.0",
     "react-redux": "^7.2.4",
+    "react-scroll-parallax": "^2.4.0",
     "react-spring": "^9.2.4",
     "react-swipeable-views": "^0.14.0",
     "react-tooltip": "^4.2.21",
