--- a/package.json
+++ b/package.json
@@ -8,28 +8,29 @@
     "start": "node_modules/next/dist/bin/next start -p $PORT"
   },
   "dependencies": {
-    "@aws-sdk/client-ses": "^3.38.0",
+    "@aws-sdk/client-ses": "^3.40.0",
     "@material-ui/core": "^4.12.3",
     "@paypal/checkout-server-sdk": "^1.0.3",
-    "@stripe/stripe-js": "^1.20.3",
+    "@radix-ui/react-dropdown-menu": "^0.1.1",
+    "@stripe/stripe-js": "^1.21.1",
     "@terwanerik/scrolltrigger": "^1.0.5",
     "animate.css": "^4.1.1",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^5.2.1",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
     "jquery": "^3.6.0",
     "net": "^1.0.2",
-    "next": "^10.2.3",
+    "next": "^12.0.3",
     "next-iron-session": "^4.2.0",
     "nodemailer": "^6.7.0",
     "perf_hooks": "0.0.1",
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-animate-on-scroll": "^2.1.5",
-    "react-dom": "17.0.1",
+    "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.32.2",
     "react-redux": "^7.2.6",
@@ -37,16 +38,17 @@
     "react-spring": "^9.3.0",
     "react-swipeable-views": "^0.14.0",
     "react-tooltip": "^4.2.21",
-    "redux": "^4.1.1",
+    "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "request": "^2.88.2",
     "serverless-mysql": "^1.5.4",
     "soap": "^0.42.0",
-    "stripe": "^8.184.0",
+    "stripe": "^8.186.1",
     "strong-soap": "^3.3.1",
-    "swr": "^0.5.7",
+    "swr": "^1.0.1",
     "tls": "0.0.1",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "webpack": "^5.62.1"
   },
   "devDependencies": {
     "@material-ui/icons": "^4.11.2"
