--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/core": "^4.12.3",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^0.1.1",
+    "@radix-ui/react-id": "^0.1.1",
     "@stripe/stripe-js": "^1.21.1",
     "@terwanerik/scrolltrigger": "^1.0.5",
     "animate.css": "^4.1.1",
@@ -26,6 +27,7 @@
     "next-iron-session": "^4.2.0",
     "nodemailer": "^6.7.0",
     "perf_hooks": "0.0.1",
+    "postcss": "^8.3.11",
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
     "react": "17.0.2",
