--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@aws-sdk/client-ses": "^3.40.0",
     "@material-ui/core": "^4.12.3",
     "@paypal/checkout-server-sdk": "^1.0.3",
+    "@paypal/react-paypal-js": "^7.4.2",
     "@radix-ui/react-dropdown-menu": "^0.1.1",
     "@radix-ui/react-id": "^0.1.1",
     "@stripe/stripe-js": "^1.21.1",
@@ -48,6 +49,7 @@
     "stripe": "^8.186.1",
     "strong-soap": "^3.3.1",
     "swr": "^1.0.1",
+    "tailwindcss": "^2.2.19",
     "tls": "0.0.1",
     "universal-cookie": "^4.0.4",
     "webpack": "^5.62.1"
