fixed cards flex temp

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "lint": "next lint",
     "start": "node_modules/next/dist/bin/next start -p $PORT"
   },
   "dependencies": {
