--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^12.0.3",
     "nodemailer": "^6.7.0",
     "postcss": "^8.3.11",
+    "prettier": "^2.5.0",
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
     "react": "17.0.2",
