--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "classnames": "^2.3.1",
     "depcheck": "^1.4.2",
     "framer-motion": "^5.2.1",
+    "js-cookie": "^3.0.1",
+    "mongoose": "^6.0.15",
     "next": "^12.0.3",
+    "next-connect": "^0.11.0",
     "nodemailer": "^6.7.0",
     "postcss": "^8.3.11",
     "prettier": "^2.5.0",
