--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ yarn-error.log*
 # local env files
 .env
 .env.local
+.env.local.example
 .env.development.local
 .env.test.local
 .env.production.local
