--- a/package.json
+++ b/package.json
@@ -12,37 +12,26 @@
     "@aws-sdk/client-ses": "^3.40.0",
     "@material-ui/core": "^4.12.3",
     "@paypal/checkout-server-sdk": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^0.1.1",
-    "@radix-ui/react-id": "^0.1.1",
-    "@stripe/stripe-js": "^1.21.1",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "depcheck": "^1.4.2",
     "framer-motion": "^5.2.1",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.0.15",
-    "next": "^12.0.3",
+    "next": "^12.0.5",
     "next-connect": "^0.11.0",
     "nodemailer": "^6.7.0",
-    "postcss": "^8.3.11",
     "prettier": "^2.5.0",
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.32.2",
-    "react-redux": "^7.2.6",
     "react-spring": "^9.3.0",
     "react-swipeable-views": "^0.14.0",
     "react-tooltip": "^4.2.21",
-    "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
     "serverless-mysql": "^1.5.4",
     "soap": "^0.42.0",
-    "swr": "^1.0.1",
-    "universal-cookie": "^4.0.4"
-  },
-  "devDependencies": {
-    "eslint": "^7.32.0"
+    "swr": "^1.0.1"
   }
 }
