--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.40.0",
-    "@material-ui/core": "^4.12.3",
-    "@paypal/checkout-server-sdk": "^1.0.3",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "depcheck": "^1.4.2",
@@ -21,6 +19,7 @@
     "next": "^12.0.5",
     "next-connect": "^0.11.0",
     "nodemailer": "^6.7.0",
+    "npm": "^8.3.0",
     "prettier": "^2.5.0",
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
@@ -28,7 +27,6 @@
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.32.2",
     "react-spring": "^9.3.0",
-    "react-swipeable-views": "^0.14.0",
     "react-tooltip": "^4.2.21",
     "serverless-mysql": "^1.5.4",
     "soap": "^0.42.0",
