--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.32.2",
+    "react-number-format": "^4.8.0",
     "react-spring": "^9.3.0",
     "react-tooltip": "^4.2.21",
     "serverless-mysql": "^1.5.4",
