--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@aws-sdk/client-ses": "^3.40.0",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "cors": "^2.8.5",
     "depcheck": "^1.4.2",
     "framer-motion": "^5.2.1",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.15",
     "next": "^12.0.5",
+    "next-auth": "^4.1.0",
     "next-connect": "^0.11.0",
     "nodemailer": "^6.7.0",
     "npm": "^8.3.0",
@@ -30,6 +33,7 @@
     "react-spring": "^9.3.0",
     "react-tooltip": "^4.2.21",
     "serverless-mysql": "^1.5.4",
+    "sharp": "^0.29.3",
     "soap": "^0.42.0",
     "swr": "^1.0.1"
   }
