--- a/.github/workflows/azure_rjs.yml
+++ b/.github/workflows/azure_rjs.yml
@@ -28,7 +28,7 @@ jobs:
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip * .env .next
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
