--- a/.github/workflows/azure_rjs.yml
+++ b/.github/workflows/azure_rjs.yml
@@ -50,8 +50,7 @@ jobs:
           name: node-app
 
       - name: unzip artifact for deployment
-          run: |
-            echo "y" | unzip -o release.zip
+        run: echo "y" | unzip -o release.zip
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
