--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "qs": "^6.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-intersection-observer": "^8.32.2",
     "react-number-format": "^4.8.0",
     "react-spring": "^9.3.0",
