--- a/.github/workflows/azure_rjs.yml
+++ b/.github/workflows/azure_rjs.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Zip artifact for deployment
         run: |
-          zip -r release.zip ./* .next
-          rm -r .env .next node_modules
+          zip -r release.zip * .next
+          rm -r .next node_modules
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
