--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "@aws-sdk/client-ses": "^3.40.0",
     "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
+    "cardinal": "^2.1.1",
     "classnames": "^2.3.1",
     "depcheck": "^1.4.2",
     "framer-motion": "^5.2.1",
     "js-cookie": "^3.0.1",
+    "mysql2": "^2.3.3",
+    "net": "^1.0.2",
     "next": "^12.0.5",
     "next-auth": "^4.1.0",
     "nodemailer": "^6.7.0",
     "npm": "^8.3.0",
     "prettier": "^2.5.0",
-    "prop-types": "^15.7.2",
     "qs": "^6.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -29,9 +32,9 @@
     "react-number-format": "^4.8.0",
     "react-spring": "^9.3.0",
     "react-tooltip": "^4.2.21",
-    "serverless-mysql": "^1.5.4",
     "sharp": "^0.29.3",
     "soap": "^0.42.0",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "tls": "^0.0.1"
   }
 }
