--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "cardinal": "^2.1.1",
     "classnames": "^2.3.1",
+    "crypto": "^1.0.1",
     "depcheck": "^1.4.2",
     "framer-motion": "^5.2.1",
     "js-cookie": "^3.0.1",
