--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-intersection-observer": "^8.32.2",
+    "react-lottie-player": "^1.4.1",
     "react-number-format": "^4.8.0",
     "react-spring": "^9.3.0",
+    "react-toastify": "^8.1.1",
     "react-tooltip": "^4.2.21",
     "sharp": "^0.29.3",
     "soap": "^0.42.0",
