--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "lint": "next lint",
-    "start": "node_modules/next/dist/bin/next start -p $PORT"
+    "start": "next start"
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.40.0",
+    "@dotlottie/player-component": "^1.0.4",
+    "@webcomponents/shadydom": "^1.9.0",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "cardinal": "^2.1.1",
     "classnames": "^2.3.1",
     "crypto": "^1.0.1",
     "depcheck": "^1.4.2",
+    "excel4node": "^1.7.2",
+    "file-saver": "^2.0.5",
     "framer-motion": "^5.2.1",
     "js-cookie": "^3.0.1",
     "mysql2": "^2.3.3",
@@ -33,11 +37,15 @@
     "react-lottie-player": "^1.4.1",
     "react-number-format": "^4.8.0",
     "react-spring": "^9.3.0",
+    "react-table": "^7.7.0",
     "react-toastify": "^8.1.1",
     "react-tooltip": "^4.2.21",
+    "request": "^2.88.2",
     "sharp": "^0.29.3",
     "soap": "^0.42.0",
     "swr": "^1.0.1",
-    "tls": "^0.0.1"
+    "tls": "^0.0.1",
+    "xlsx": "^0.18.2",
+    "xlsx-populate": "^1.21.0"
   }
 }
