--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "lint": "next lint",
-    "start": "next start"
+    "start": "node_modules/next/dist/bin/next start -p $PORT"
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.40.0",
@@ -40,7 +40,6 @@
     "react-table": "^7.7.0",
     "react-toastify": "^8.1.1",
     "react-tooltip": "^4.2.21",
-    "request": "^2.88.2",
     "sharp": "^0.29.3",
     "soap": "^0.42.0",
     "swr": "^1.0.1",
