--- a/.github/workflows/azure_rjss.yml
+++ b/.github/workflows/azure_rjss.yml
@@ -21,12 +21,23 @@ jobs:
         with:
           node-version: '16.x'
 
+          #  - name: Create env file
+          #   run: |
+          #    touch .env
+          #   echo API_ENDPOINT=
+          #  echo API_KEY=${{ secrets.API_KEY }} >> .env
+          # EMAIL_USER=AKIAUE4LVMWRBOJQKQ7T
+          #EMAIL_PASSWORD=BNefYeh8TtzjURa9e7XX85LpThCjco902Z5uijJA5+N+
+          #EMAIL_HOST=email-smtp.eu-central-1.amazonaws.com
+          #EMAIL_PORT=587
+          #EMAIL_FROM=real.martin.zannato@gmail.com
+          #cat .env
+
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
-
 
       - name: Zip artifact for deployment
         run: |
@@ -53,7 +64,8 @@ jobs:
           name: node-app
 
       - name: unzip artifact for deployment
-        run: unzip -o release.zip
+        run: |
+          unzip -o release.zip
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
