--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "excel4node": "^1.2.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^5.2.1",
+    "gsap": "^3.9.1",
     "js-cookie": "^3.0.1",
     "mysql2": "^2.3.3",
     "net": "^1.0.2",
@@ -37,9 +38,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-gsap": "^3.2.1",
     "react-intersection-observer": "^8.32.2",
     "react-lottie-player": "^1.4.1",
     "react-number-format": "^4.8.0",
+    "react-scrollmagic": "^2.3.0",
     "react-spring": "^9.3.0",
     "react-table": "^7.7.0",
     "react-toastify": "^8.1.1",
