--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.40.0",
+    "@lottiefiles/react-lottie-player": "^3.4.1",
     "@next/bundle-analyzer": "^12.1.0",
     "@webcomponents/shadydom": "^1.9.0",
+    "a11y-dialog": "^7.3.0",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "cardinal": "^2.1.1",
@@ -36,11 +38,11 @@
     "prettier": "^2.5.0",
     "qs": "^6.10.1",
     "react": "17.0.2",
+    "react-a11y-dialog": "^6.1.3",
     "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-gsap": "^3.2.1",
     "react-intersection-observer": "^8.32.2",
-    "react-lottie-player": "^1.4.1",
     "react-number-format": "^4.8.0",
     "react-scrollmagic": "^2.3.0",
     "react-spring": "^9.3.0",
