--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "depcheck": "^1.4.2",
     "excel4node": "^1.2.1",
     "file-saver": "^2.0.5",
-    "framer-motion": "^5.2.1",
+    "framer-motion": "^5.6.0",
     "gsap": "^3.9.1",
     "js-cookie": "^3.0.1",
     "mysql2": "^2.3.3",
@@ -49,6 +49,7 @@
     "react-table": "^7.7.0",
     "react-toastify": "^8.1.1",
     "react-tooltip": "^4.2.21",
+    "react-transition-group": "^4.4.2",
     "sharp": "^0.29.3",
     "soap": "^0.42.0",
     "swr": "^1.0.1",
