--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-auth": "^4.1.0",
     "nodemailer": "^6.7.0",
     "npm": "^8.3.0",
+    "paypal-rest-sdk": "^1.8.1",
     "prettier": "^2.5.0",
     "qs": "^6.10.1",
     "react": "17.0.2",
