--- a/package.json
+++ b/package.json
@@ -13,44 +13,37 @@
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.40.0",
+    "@builder.io/partytown": "^0.5.1",
     "@lottiefiles/react-lottie-player": "^3.4.1",
     "@next/bundle-analyzer": "^12.1.0",
     "@webcomponents/shadydom": "^1.9.0",
-    "a11y-dialog": "^7.3.0",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
-    "cardinal": "^2.1.1",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
-    "crypto": "^1.0.1",
     "depcheck": "^1.4.2",
-    "excel4node": "^1.2.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^5.6.0",
     "gsap": "^3.9.1",
     "js-cookie": "^3.0.1",
     "mysql2": "^2.3.3",
-    "net": "^1.0.2",
-    "next": "^12.1.0",
+    "next": "^12.1.3-canary.0",
     "next-auth": "^4.1.0",
     "nodemailer": "^6.7.0",
     "npm": "^8.3.0",
     "paypal-rest-sdk": "^1.8.1",
     "prettier": "^2.5.0",
     "qs": "^6.10.1",
-    "react": "17.0.2",
-    "react-a11y-dialog": "^6.1.3",
-    "react-dom": "17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-google-recaptcha": "^2.1.0",
     "react-gsap": "^3.2.1",
     "react-intersection-observer": "^8.32.2",
     "react-number-format": "^4.8.0",
     "react-scrollmagic": "^2.3.0",
-    "react-spring": "^9.3.0",
     "react-table": "^7.7.0",
     "react-toastify": "^8.1.1",
     "react-tooltip": "^4.2.21",
-    "react-transition-group": "^4.4.2",
     "sharp": "^0.29.3",
     "soap": "^0.42.0",
     "swr": "^1.0.1",
