--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "mysql": "^2.18.1",
-    "cors": "^2.8.5",
     "nodemon": "^2.0.15",
-    "body-parser": "^1.19.1"
+    "xml": "^1.0.1"
   },
   "scripts": {
     "dev": "nodemon",
