--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@lottiefiles/react-lottie-player": "^3.4.1",
     "@next/bundle-analyzer": "^12.1.0",
     "@webcomponents/shadydom": "^1.9.0",
+    "adm-zip": "^0.5.9",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.1",
