--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "cross-env": "^7.0.3",
     "depcheck": "^1.4.2",
     "file-saver": "^2.0.5",
-    "framer-motion": "^5.6.0",
     "gsap": "^3.9.1",
     "js-cookie": "^3.0.1",
     "mysql2": "^2.3.3",
@@ -32,6 +31,7 @@
     "next-auth": "^4.1.0",
     "nodemailer": "^6.7.0",
     "npm": "^8.3.0",
+    "pako": "^2.0.4",
     "paypal-rest-sdk": "^1.8.1",
     "prettier": "^2.5.0",
     "qs": "^6.10.1",
